//! Cross-Service gRPC Integration Tests
//!
//! This module tests the integration between multiple microservices
//! communicating via gRPC, simulating real production scenarios.

#[cfg(test)]
mod grpc_cross_service_tests {
    use std::net::SocketAddr;
    use std::sync::Arc;
    use std::time::Duration;
    use tokio::sync::Mutex;

    /// Test scenario: User Service queries Messaging Service for user conversation data
    ///
    /// Flow:
    /// 1. Create a user profile in User Service
    /// 2. Start a conversation in Messaging Service
    /// 3. User Service retrieves conversation metadata via gRPC
    #[tokio::test]
    async fn test_user_service_queries_messaging_service() {
        // Note: This test requires both services to be running locally
        // Run with:
        // SERVICES_RUNNING=true cargo test test_user_service_queries_messaging_service -- --ignored --nocapture

        if std::env::var("SERVICES_RUNNING").is_err() {
            eprintln!("Skipping: Services not running. Set SERVICES_RUNNING=true to enable");
            return;
        }

        // Connect to Messaging Service gRPC endpoint
        let messaging_grpc_endpoint = "http://127.0.0.1:9085";

        // Example: Connect to messaging service and query conversations
        // This would use the generated gRPC client from messaging_service.proto

        println!("Testing User Service → Messaging Service gRPC call");
        println!("Messaging Service endpoint: {}", messaging_grpc_endpoint);
    }

    /// Test scenario: Messaging Service queries User Service for user profiles
    ///
    /// Flow:
    /// 1. Messaging Service receives a message from a user
    /// 2. Queries User Service gRPC endpoint for user profile data
    /// 3. Validates the response contains expected profile fields
    #[tokio::test]
    async fn test_messaging_service_queries_user_service() {
        if std::env::var("SERVICES_RUNNING").is_err() {
            return;
        }

        let user_grpc_endpoint = "http://127.0.0.1:9081";

        println!("Testing Messaging Service → User Service gRPC call");
        println!("User Service endpoint: {}", user_grpc_endpoint);
    }

    /// Test scenario: Multiple services communicate in parallel
    ///
    /// Validates:
    /// - Connection pooling works correctly
    /// - Concurrent requests don't cause connection exhaustion
    /// - Services handle multiple simultaneous gRPC calls
    #[tokio::test]
    async fn test_concurrent_cross_service_calls() {
        if std::env::var("SERVICES_RUNNING").is_err() {
            return;
        }

        // Spawn multiple concurrent tasks making gRPC calls
        let tasks: Vec<_> = (0..10)
            .map(|i| {
                tokio::spawn(async move {
                    println!("Task {} executing concurrent gRPC call", i);
                    tokio::time::sleep(Duration::from_millis(100)).await;
                    i
                })
            })
            .collect();

        // Wait for all tasks to complete
        for task in tasks {
            let _ = task.await;
        }
    }

    /// Test scenario: gRPC error handling across services
    ///
    /// Validates:
    /// - Services properly handle gRPC errors
    /// - Timeouts are respected
    /// - Connection failures are handled gracefully
    #[tokio::test]
    async fn test_grpc_error_handling() {
        // Connect to non-existent service to trigger timeout
        let invalid_endpoint = "http://127.0.0.1:19999";

        println!("Testing gRPC timeout handling to: {}", invalid_endpoint);

        // This would attempt to connect and should timeout gracefully
        tokio::time::timeout(
            Duration::from_secs(2),
            async {
                // Simulate a failed connection attempt
                println!("Connection attempt would timeout here");
            }
        ).await.ok();
    }

    /// Test scenario: User-Messaging service relationship consistency
    ///
    /// Validates:
    /// - When a user is created in User Service, Messaging Service can query it
    /// - User updates propagate correctly to Messaging Service cache
    /// - Soft deletes are respected across services
    #[tokio::test]
    async fn test_user_messaging_relationship_consistency() {
        if std::env::var("SERVICES_RUNNING").is_err() {
            return;
        }

        println!("Testing user-messaging relationship consistency");

        // Scenario:
        // 1. POST /api/v1/users → Create user in User Service
        // 2. gRPC UserService.GetUserProfile → Verify user exists
        // 3. gRPC MessagingService.GetMessages → Verify messages can reference user
    }
}

/// Integration test utilities for gRPC services
mod grpc_test_utils {
    use std::time::Duration;

    /// Configuration for gRPC service endpoints
    pub struct GrpcServiceEndpoints {
        pub user_service: String,
        pub messaging_service: String,
        pub auth_service: String,
    }

    impl Default for GrpcServiceEndpoints {
        fn default() -> Self {
            Self {
                user_service: "http://127.0.0.1:9081".to_string(),
                messaging_service: "http://127.0.0.1:9085".to_string(),
                auth_service: "http://127.0.0.1:9086".to_string(),
            }
        }
    }

    /// Helper to wait for gRPC service to be healthy
    pub async fn wait_for_grpc_service(
        endpoint: &str,
        timeout: Duration,
    ) -> Result<(), Box<dyn std::error::Error>> {
        let start = std::time::Instant::now();

        loop {
            if start.elapsed() > timeout {
                return Err("Service health check timeout".into());
            }

            // In real scenario, we would make a Health check gRPC call
            tokio::time::sleep(Duration::from_millis(100)).await;

            println!("Waiting for service: {}", endpoint);
        }
    }

    /// Helper to create test data via REST API before testing gRPC
    pub async fn create_test_user(
        base_url: &str,
        user_id: &str,
        username: &str,
    ) -> Result<(), Box<dyn std::error::Error>> {
        println!("Creating test user: {} ({})", username, user_id);

        // In real scenario:
        // let client = reqwest::Client::new();
        // let response = client
        //     .post(format!("{}/api/v1/users", base_url))
        //     .json(&json!({"id": user_id, "username": username}))
        //     .send()
        //     .await?;

        Ok(())
    }

    /// Helper to create test conversation
    pub async fn create_test_conversation(
        base_url: &str,
        conversation_id: &str,
        participants: Vec<String>,
    ) -> Result<(), Box<dyn std::error::Error>> {
        println!("Creating test conversation: {} with {:?}", conversation_id, participants);

        // In real scenario:
        // let client = reqwest::Client::new();
        // let response = client
        //     .post(format!("{}/api/v1/conversations", base_url))
        //     .json(&json!({"id": conversation_id, "participants": participants}))
        //     .send()
        //     .await?;

        Ok(())
    }

    /// Helper to send test message
    pub async fn send_test_message(
        base_url: &str,
        conversation_id: &str,
        sender_id: &str,
        content: &str,
    ) -> Result<(), Box<dyn std::error::Error>> {
        println!("Sending test message in conversation {}", conversation_id);

        // In real scenario:
        // let client = reqwest::Client::new();
        // let response = client
        //     .post(format!("{}/api/v1/conversations/{}/messages", base_url, conversation_id))
        //     .json(&json!({"sender_id": sender_id, "content": content}))
        //     .send()
        //     .await?;

        Ok(())
    }
}

#[cfg(test)]
mod full_integration_scenarios {
    use super::grpc_test_utils::*;
    use std::time::Duration;

    /// Full end-to-end scenario:
    /// 1. User A sends a message to User B in Messaging Service
    /// 2. Messaging Service queries User Service for sender's profile
    /// 3. Messaging Service queries User Service for recipient's profile
    /// 4. Message is stored with user references
    /// 5. User B retrieves message with sender's profile via gRPC
    #[tokio::test]
    async fn test_e2e_message_with_user_lookup() {
        if std::env::var("SERVICES_RUNNING").is_err() {
            println!("Skipping E2E test: Services not running");
            return;
        }

        let endpoints = GrpcServiceEndpoints::default();

        println!("=== E2E Scenario: Message with User Lookup ===");

        // Step 1: Create users
        let _ = create_test_user("http://127.0.0.1:8081", "user-1", "alice").await;
        let _ = create_test_user("http://127.0.0.1:8081", "user-2", "bob").await;

        // Step 2: Create conversation
        let _ = create_test_conversation(
            "http://127.0.0.1:8085",
            "conv-1",
            vec!["user-1".to_string(), "user-2".to_string()],
        ).await;

        // Step 3: Send message
        let _ = send_test_message(
            "http://127.0.0.1:8085",
            "conv-1",
            "user-1",
            "Hello, Bob!",
        ).await;

        // Step 4: Query via gRPC would happen here
        println!("Messaging Service would now query User Service for profile data via gRPC");
    }

    /// Scenario: User profile update propagation
    /// 1. User updates profile in User Service
    /// 2. Update event is published to Kafka
    /// 3. Messaging Service consumes event and updates cache
    /// 4. Next gRPC query returns updated data
    #[tokio::test]
    async fn test_profile_update_propagation() {
        if std::env::var("SERVICES_RUNNING").is_err() {
            return;
        }

        println!("=== Scenario: Profile Update Propagation ===");

        // 1. Update user profile via REST API
        println!("Step 1: Update user profile via REST API");

        // 2. Wait for event propagation
        println!("Step 2: Waiting for Kafka event propagation (~100ms)");
        tokio::time::sleep(Duration::from_millis(100)).await;

        // 3. Query via gRPC should reflect updates
        println!("Step 3: Query User Service gRPC endpoint for updated profile");
    }

    /// Scenario: Batch operations with multiple services
    /// Tests that batch queries work correctly with gRPC connections
    #[tokio::test]
    async fn test_batch_user_lookup() {
        if std::env::var("SERVICES_RUNNING").is_err() {
            return;
        }

        println!("=== Scenario: Batch User Lookup ===");

        let user_ids = vec!["user-1", "user-2", "user-3", "user-4", "user-5"];

        println!("Querying {} users via gRPC batch endpoint", user_ids.len());

        // In real scenario, would use GetUserProfilesByIds gRPC method
        for user_id in user_ids {
            println!("  - Retrieving profile for: {}", user_id);
        }
    }
}
